modifification du notebook de fusion et ajout d'un notebook d'exploration ML

--- a/notebook/fusion_log-logerror.ipynb
+++ b/notebook/fusion_log-logerror.ipynb
@@ -3417,6 +3417,236 @@
    "source": [
     "df_global.to_csv(\"../data/dataset_LogETL_LogServer.csv\", index=False, encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date et heure</th>\n",
+       "      <th>nb_operations_error</th>\n",
+       "      <th>nb_operations</th>\n",
+       "      <th>rows_added</th>\n",
+       "      <th>rows_updated</th>\n",
+       "      <th>rows_deleted</th>\n",
+       "      <th>Somme (Volume)(Mo)</th>\n",
+       "      <th>Somme (Débit)(Mbit/s)</th>\n",
+       "      <th>Trafic entrant (Volume)(o)</th>\n",
+       "      <th>Trafic entrant (Débit)(o/s)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Processeur 1(%)</th>\n",
+       "      <th>Processeur 2(%)</th>\n",
+       "      <th>Processeur 3(%)</th>\n",
+       "      <th>Processeur 4(%)</th>\n",
+       "      <th>Processeur 5(%)</th>\n",
+       "      <th>Processeur 6(%)</th>\n",
+       "      <th>Processeur 7(%)</th>\n",
+       "      <th>Processeur 8(%)</th>\n",
+       "      <th>Temps mort cpu(%)</th>\n",
+       "      <th>Couverture cpu(%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-08-25 00:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.288009e+10</td>\n",
+       "      <td>1.746693e+07</td>\n",
+       "      <td>5.283779e+10</td>\n",
+       "      <td>1.467737e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.6667</td>\n",
+       "      <td>17.3333</td>\n",
+       "      <td>30.5833</td>\n",
+       "      <td>25.5000</td>\n",
+       "      <td>49.0833</td>\n",
+       "      <td>13.1667</td>\n",
+       "      <td>32.9167</td>\n",
+       "      <td>14.1667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-08-25 01:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.691631e+10</td>\n",
+       "      <td>1.303249e+07</td>\n",
+       "      <td>3.645585e+10</td>\n",
+       "      <td>1.012677e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>8.5833</td>\n",
+       "      <td>45.5000</td>\n",
+       "      <td>19.0833</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>44.5833</td>\n",
+       "      <td>8.2500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-08-25 02:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.431603e+10</td>\n",
+       "      <td>9.532415e+06</td>\n",
+       "      <td>2.317469e+10</td>\n",
+       "      <td>6.437540e+06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.0000</td>\n",
+       "      <td>13.1667</td>\n",
+       "      <td>65.5833</td>\n",
+       "      <td>19.2500</td>\n",
+       "      <td>9.7500</td>\n",
+       "      <td>15.1667</td>\n",
+       "      <td>23.8333</td>\n",
+       "      <td>16.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-08-25 03:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.558972e+06</td>\n",
+       "      <td>1.266399e+03</td>\n",
+       "      <td>2.578988e+06</td>\n",
+       "      <td>7.163955e+02</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>1.3333</td>\n",
+       "      <td>0.1667</td>\n",
+       "      <td>0.1667</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>0.3333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-08-25 04:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>200563.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.423123e+07</td>\n",
+       "      <td>2.339789e+04</td>\n",
+       "      <td>4.723165e+07</td>\n",
+       "      <td>1.312008e+04</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>0.1667</td>\n",
+       "      <td>0.6667</td>\n",
+       "      <td>1.5833</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>0.1667</td>\n",
+       "      <td>0.4167</td>\n",
+       "      <td>0.4167</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 64 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date et heure  nb_operations_error  nb_operations  rows_added  \\\n",
+       "0 2024-08-25 00:00:00                  0.0            0.0         0.0   \n",
+       "1 2024-08-25 01:00:00                  0.0            0.0         0.0   \n",
+       "2 2024-08-25 02:00:00                  0.0            0.0         0.0   \n",
+       "3 2024-08-25 03:00:00                  0.0            0.0         0.0   \n",
+       "4 2024-08-25 04:00:00                  0.0           11.0    200563.0   \n",
+       "\n",
+       "   rows_updated  rows_deleted  Somme (Volume)(Mo)  Somme (Débit)(Mbit/s)  \\\n",
+       "0           0.0           0.0        6.288009e+10           1.746693e+07   \n",
+       "1           0.0           0.0        4.691631e+10           1.303249e+07   \n",
+       "2           0.0           0.0        3.431603e+10           9.532415e+06   \n",
+       "3           0.0           0.0        4.558972e+06           1.266399e+03   \n",
+       "4           0.0           0.0        8.423123e+07           2.339789e+04   \n",
+       "\n",
+       "   Trafic entrant (Volume)(o)  Trafic entrant (Débit)(o/s)  ...  \\\n",
+       "0                5.283779e+10                 1.467737e+07  ...   \n",
+       "1                3.645585e+10                 1.012677e+07  ...   \n",
+       "2                2.317469e+10                 6.437540e+06  ...   \n",
+       "3                2.578988e+06                 7.163955e+02  ...   \n",
+       "4                4.723165e+07                 1.312008e+04  ...   \n",
+       "\n",
+       "   Processeur 1(%)  Processeur 2(%)  Processeur 3(%)  Processeur 4(%)  \\\n",
+       "0          10.6667          17.3333          30.5833          25.5000   \n",
+       "1           2.5000           8.5833          45.5000          19.0833   \n",
+       "2          12.0000          13.1667          65.5833          19.2500   \n",
+       "3           0.0833           0.0833           0.0833           1.3333   \n",
+       "4           0.0833           0.1667           0.6667           1.5833   \n",
+       "\n",
+       "   Processeur 5(%)  Processeur 6(%)  Processeur 7(%)  Processeur 8(%)  \\\n",
+       "0          49.0833          13.1667          32.9167          14.1667   \n",
+       "1           7.7500           2.5000          44.5833           8.2500   \n",
+       "2           9.7500          15.1667          23.8333          16.0000   \n",
+       "3           0.1667           0.1667           0.0833           0.3333   \n",
+       "4           0.0833           0.1667           0.4167           0.4167   \n",
+       "\n",
+       "   Temps mort cpu(%)  Couverture cpu(%)  \n",
+       "0                0.0             4000.0  \n",
+       "1                0.0             4000.0  \n",
+       "2                0.0             4000.0  \n",
+       "3                0.0             4000.0  \n",
+       "4                0.0             4000.0  \n",
+       "\n",
+       "[5 rows x 64 columns]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_global.head()"
+   ]
   }
  ],
  "metadata": {
