feature notebook to script - refactoring des repertoires des notebooks

--- a/notebook/logParquet/DetailedFieldLogs_sub_2412021040.ipynb
+++ b/notebook/logParquet/DetailedFieldLogs_sub_2412021040.ipynb
@@ -96,7 +96,7 @@
     "import pandas as pd\n",
     "\n",
     "# Lire un fichier Parquet\n",
-    "df = pd.read_parquet('../data/logParquet/DetailedFieldLogs_sub_2412021040.parquet')\n",
+    "df = pd.read_parquet('../../data/logParquet/DetailedFieldLogs_sub_2412021040.parquet')\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
