--- a/notebook/logParquet/DetailedDashboardLogs_sub_2411222036.ipynb
+++ b/notebook/logParquet/DetailedDashboardLogs_sub_2411222036.ipynb
@@ -59,7 +59,7 @@
     "import pandas as pd\n",
     "\n",
     "# Lire un fichier Parquet\n",
-    "df = pd.read_parquet('../data/logParquet/DetailedDashboardLogs_sub_2411222036.parquet')\n",
+    "df = pd.read_parquet('../../data/logParquet/DetailedDashboardLogs_sub_2411222036.parquet')\n",
     "\n",
     "# Afficher les premières lignes\n",
     "print(df.head())"
