--- a/notebook/logParquet/DetailedDistributionLogs_sub_2411222036.ipynb
+++ b/notebook/logParquet/DetailedDistributionLogs_sub_2411222036.ipynb
@@ -66,7 +66,7 @@
    ],
    "source": [
     "# Lire un fichier Parquet\n",
-    "df = pd.read_parquet('../data/logParquet/DetailedDistributionLogs_sub_2411222036.parquet')\n",
+    "df = pd.read_parquet('../../data/logParquet/DetailedDistributionLogs_sub_2411222036.parquet')\n",
     "\n",
     "# Afficher les premières lignes\n",
     "print(df.head())"
