feature notebook to script - deplacement de notebook

--- a/notebook/experiment/test-manon.ipynb
+++ b/notebook/experiment/test-manon.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-02-23T15:54:43.269125Z",
-     "start_time": "2025-02-23T15:54:43.246050Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import pandas as pd\n",
@@ -40,373 +36,19 @@
     "transformed_data.columns\n",
     "\n"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['date_et_heure', 'date_et_heure_raw', 'somme', 'somme_raw',\n",
-       "       'octets_libres_c', 'octets_libres_c_raw', 'espace_disponible_c',\n",
-       "       'espace_disponible_c_raw', 'octets_libres_d', 'octets_libres_d_raw',\n",
-       "       'espace_disponible_d', 'espace_disponible_d_raw', 'temps_mort',\n",
-       "       'temps_mort_raw', 'couverture', 'couverture_raw'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 29
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-23T14:48:58.064839Z",
-     "start_time": "2025-02-23T14:48:58.057470Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "data",
    "id": "57b82c6b1a18f3a",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                       date_et_heure  date_et_heure_raw   somme  somme_raw  \\\n",
-       "0     12/01/2024 00:00:00 - 01:00:00       45303.000000     NaN        NaN   \n",
-       "1     12/01/2024 01:00:00 - 02:00:00       45303.041667     NaN        NaN   \n",
-       "2     12/01/2024 02:00:00 - 03:00:00       45303.083333     NaN        NaN   \n",
-       "3     12/01/2024 03:00:00 - 04:00:00       45303.125000     NaN        NaN   \n",
-       "4     12/01/2024 04:00:00 - 05:00:00       45303.166667     NaN        NaN   \n",
-       "...                              ...                ...     ...        ...   \n",
-       "8012  10/12/2024 20:00:00 - 21:00:00       45636.833333     NaN        NaN   \n",
-       "8013  10/12/2024 21:00:00 - 22:00:00       45636.875000     NaN        NaN   \n",
-       "8014  10/12/2024 22:00:00 - 23:00:00       45636.916667     NaN        NaN   \n",
-       "8015  10/12/2024 23:00:00 - 00:00:00       45636.958333     NaN        NaN   \n",
-       "8016      Moyennes (de 2193 valeurs)                NaN  129 Go        NaN   \n",
-       "\n",
-       "     octets_libres_c  octets_libres_c_raw espace_disponible_c  \\\n",
-       "0                NaN                  NaN                 NaN   \n",
-       "1                NaN                  NaN                 NaN   \n",
-       "2                NaN                  NaN                 NaN   \n",
-       "3                NaN                  NaN                 NaN   \n",
-       "4                NaN                  NaN                 NaN   \n",
-       "...              ...                  ...                 ...   \n",
-       "8012             NaN                  NaN                 NaN   \n",
-       "8013             NaN                  NaN                 NaN   \n",
-       "8014             NaN                  NaN                 NaN   \n",
-       "8015             NaN                  NaN                 NaN   \n",
-       "8016           15 Go                  NaN                25 %   \n",
-       "\n",
-       "      espace_disponible_c_raw octets_libres_d  octets_libres_d_raw  \\\n",
-       "0                         NaN             NaN                  NaN   \n",
-       "1                         NaN             NaN                  NaN   \n",
-       "2                         NaN             NaN                  NaN   \n",
-       "3                         NaN             NaN                  NaN   \n",
-       "4                         NaN             NaN                  NaN   \n",
-       "...                       ...             ...                  ...   \n",
-       "8012                      NaN             NaN                  NaN   \n",
-       "8013                      NaN             NaN                  NaN   \n",
-       "8014                      NaN             NaN                  NaN   \n",
-       "8015                      NaN             NaN                  NaN   \n",
-       "8016                      NaN          114 Go                  NaN   \n",
-       "\n",
-       "     espace_disponible_d  espace_disponible_d_raw temps_mort  temps_mort_raw  \\\n",
-       "0                    NaN                      NaN        NaN             NaN   \n",
-       "1                    NaN                      NaN        NaN             NaN   \n",
-       "2                    NaN                      NaN        NaN             NaN   \n",
-       "3                    NaN                      NaN        NaN             NaN   \n",
-       "4                    NaN                      NaN        NaN             NaN   \n",
-       "...                  ...                      ...        ...             ...   \n",
-       "8012                 NaN                      NaN        NaN             NaN   \n",
-       "8013                 NaN                      NaN        NaN             NaN   \n",
-       "8014                 NaN                      NaN        NaN             NaN   \n",
-       "8015                 NaN                      NaN        NaN             NaN   \n",
-       "8016                11 %                      NaN        0 %             NaN   \n",
-       "\n",
-       "     couverture  couverture_raw  \n",
-       "0           0 %             0.0  \n",
-       "1           0 %             0.0  \n",
-       "2           0 %             0.0  \n",
-       "3           0 %             0.0  \n",
-       "4           0 %             0.0  \n",
-       "...         ...             ...  \n",
-       "8012        0 %             0.0  \n",
-       "8013        0 %             0.0  \n",
-       "8014        0 %             0.0  \n",
-       "8015        0 %             0.0  \n",
-       "8016       27 %             NaN  \n",
-       "\n",
-       "[8017 rows x 16 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date_et_heure</th>\n",
-       "      <th>date_et_heure_raw</th>\n",
-       "      <th>somme</th>\n",
-       "      <th>somme_raw</th>\n",
-       "      <th>octets_libres_c</th>\n",
-       "      <th>octets_libres_c_raw</th>\n",
-       "      <th>espace_disponible_c</th>\n",
-       "      <th>espace_disponible_c_raw</th>\n",
-       "      <th>octets_libres_d</th>\n",
-       "      <th>octets_libres_d_raw</th>\n",
-       "      <th>espace_disponible_d</th>\n",
-       "      <th>espace_disponible_d_raw</th>\n",
-       "      <th>temps_mort</th>\n",
-       "      <th>temps_mort_raw</th>\n",
-       "      <th>couverture</th>\n",
-       "      <th>couverture_raw</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12/01/2024 00:00:00 - 01:00:00</td>\n",
-       "      <td>45303.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12/01/2024 01:00:00 - 02:00:00</td>\n",
-       "      <td>45303.041667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12/01/2024 02:00:00 - 03:00:00</td>\n",
-       "      <td>45303.083333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12/01/2024 03:00:00 - 04:00:00</td>\n",
-       "      <td>45303.125000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12/01/2024 04:00:00 - 05:00:00</td>\n",
-       "      <td>45303.166667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8012</th>\n",
-       "      <td>10/12/2024 20:00:00 - 21:00:00</td>\n",
-       "      <td>45636.833333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8013</th>\n",
-       "      <td>10/12/2024 21:00:00 - 22:00:00</td>\n",
-       "      <td>45636.875000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8014</th>\n",
-       "      <td>10/12/2024 22:00:00 - 23:00:00</td>\n",
-       "      <td>45636.916667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8015</th>\n",
-       "      <td>10/12/2024 23:00:00 - 00:00:00</td>\n",
-       "      <td>45636.958333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8016</th>\n",
-       "      <td>Moyennes (de 2193 valeurs)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>129 Go</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15 Go</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25 %</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>114 Go</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11 %</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0 %</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>27 %</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8017 rows × 16 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 28
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-23T15:54:46.973629Z",
-     "start_time": "2025-02-23T15:54:46.672100Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Étape 3 : Chargement des données\n",
@@ -418,7 +60,7 @@
    ],
    "id": "26023d57c557505a",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": null
   }
  ],
  "metadata": {
