feature notebook to script - deplacement de notebook

--- a/notebook/fusion/fusion_log-logerror.ipynb
+++ b/notebook/fusion/fusion_log-logerror.ipynb
@@ -443,21 +443,21 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Ouverture du fichier\n",
     "#df = pd.read_parquet(\"/Users/guillaumeramirez/OneDrive - CentraleSupelec/Smart ETL - DOR/data/parquet/LogETL_20250130.csv_sub_2501301744.parquet\")\n",
     "#df = pd.read_parquet('/Users/Antoine/Library/CloudStorage/OneDrive-CentraleSupelec/Smart ETL - DOR/data/parquet/LogETL_20250130.csv_sub_2501301744.parquet')\n",
-    "df = pd.read_parquet(\"../data/logParquet/LogETL_20250130.csv_sub_2501301744.parquet\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "df = pd.read_parquet(\"../../data/logParquet/LogETL_20250130.csv_sub_2501301744.parquet\")"
+   ]
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df.head()",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "df.head()"
   },
   {
    "metadata": {},
