--- a/notebook/logParquet/LogExpedition_20250130.csv_sub_2501301751.ipynb
+++ b/notebook/logParquet/LogExpedition_20250130.csv_sub_2501301751.ipynb
@@ -1,28 +1,59 @@
 {
  "cells": [
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "raw",
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Lire un fichier Parquet\n",
-    "df = pd.read_parquet(\"/Users/guillaumeramirez/OneDrive - CentraleSupelec/Smart ETL - DOR/data/parquet/LogExpedition_20250130.csv_sub_2501301751.parquet\")\n",
-    "\n",
-    "# Afficher les premières lignes\n",
-    "print(df.head())"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
-    "print(df.shape)"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "{\n",
+    " \"cells\": [\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"import pandas as pd\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Lire un fichier Parquet\\n\",\n",
+    "    \"df = pd.read_parquet(\\\"/Users/guillaumeramirez/OneDrive - CentraleSupelec/Smart ETL - DOR/data/parquet/LogExpedition_20250130.csv_sub_2501301751.parquet\\\")\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Afficher les premières lignes\\n\",\n",
+    "    \"print(df.head())\"\n",
+    "   ],\n",
+    "   \"outputs\": [],\n",
+    "   \"execution_count\": null\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"print(df.shape)\"\n",
+    "   ],\n",
+    "   \"outputs\": [],\n",
+    "   \"execution_count\": null\n",
+    "  }\n",
+    " ],\n",
+    " \"metadata\": {\n",
+    "  \"kernelspec\": {\n",
+    "   \"display_name\": \"DORenv\",\n",
+    "   \"language\": \"python\",\n",
+    "   \"name\": \"python3\"\n",
+    "  },\n",
+    "  \"language_info\": {\n",
+    "   \"codemirror_mode\": {\n",
+    "    \"name\": \"ipython\",\n",
+    "    \"version\": 3\n",
+    "   },\n",
+    "   \"file_extension\": \".py\",\n",
+    "   \"mimetype\": \"text/x-python\",\n",
+    "   \"name\": \"python\",\n",
+    "   \"nbconvert_exporter\": \"python\",\n",
+    "   \"pygments_lexer\": \"ipython3\",\n",
+    "   \"version\": \"3.13.1\"\n",
+    "  }\n",
+    " },\n",
+    " \"nbformat\": 4,\n",
+    " \"nbformat_minor\": 2\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
